RESOLVED FIXED53172
[Qt] Fix qt_minimal build
https://bugs.webkit.org/show_bug.cgi?id=53172
Summary [Qt] Fix qt_minimal build
Csaba Osztrogonác
Reported 2011-01-26 08:14:53 PST
WebKit.pri: contains(DEFINES, QT_NO_UITOOLS): CONFIG -= uitools -> It should be after setting QT_NO_UITOOLS (Build error if CONFIG contains qt_minimal or if we have minimal Qt) In Tools/QtTestBrowser/locationedit.h we should include qconfig.h if QT_NO_INPUTDIALOG isn't disabled explicitly. (Build error if CONFIG doesn't contain qt_minimal, but we have minimal Qt) Patch is coming soon.
Attachments
proposed fix (1.82 KB, patch)
2011-01-26 08:19 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2011-01-26 08:18:13 PST
s/QT_NO_INPUTDIALOG isn't disabled explicitly/QT_NO_INPUTDIALOG isn't defined explicitly
Csaba Osztrogonác
Comment 2 2011-01-26 08:19:28 PST
Created attachment 80195 [details] proposed fix
Csaba Osztrogonác
Comment 3 2011-01-26 08:28:16 PST
After this fix is landed, I can make "Qt minimal" buildbot use minimal Qt instead of normal Qt. This bot will stand guard not to allow build breaks in the future with minimal Qt. qconfig-webkit-minimal.h: #define QT_NO_ANIMATION #define QT_NO_BEARERMANAGEMENT #define QT_NO_CLIPBOARD #define QT_NO_COMBOBOX #define QT_NO_CONCURRENT #define QT_NO_CRASHHANDLER #define QT_NO_CURSOR #define QT_NO_DESKTOPSERVICES #define QT_NO_FILEDIALOG #define QT_NO_GRAPHICSEFFECT #define QT_NO_IM #define QT_NO_INPUTDIALOG #define QT_NO_LINEEDIT #define QT_NO_MESSAGEBOX #define QT_NO_OPENSSL #define QT_NO_PRINTER #define QT_NO_QUUID_STRING #define QT_NO_SHORTCUT #define QT_NO_STYLE_STYLESHEET #define QT_NO_SYSTEMTRAYICON #define QT_NO_TEMPORARYFILE #define QT_NO_TOOLTIP #define QT_NO_UITOOLS #define QT_NO_UNDOCOMMAND #define QT_NO_UNDOSTACK #define QT_NO_XRENDER
Andreas Kling
Comment 4 2011-01-26 08:57:35 PST
Comment on attachment 80195 [details] proposed fix rs=me
Csaba Osztrogonác
Comment 5 2011-01-26 09:57:17 PST
WebKit Review Bot
Comment 6 2011-01-26 10:43:04 PST
http://trac.webkit.org/changeset/76694 might have broken GTK Linux 32-bit Release
Note You need to log in before you can comment on or make changes to this bug.