[Qt] Fix qt_minimal build https://bugs.webkit.org/show_bug.cgi?id=53172

Reviewed by Andreas Kling.

* Source/WebKit.pri:
* Tools/QtTestBrowser/locationedit.h:



Canonical link: https://commits.webkit.org/66914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76694 268f45cc-cd09-0410-ab3c-d52691b4dbfc