Tools/QtTestBrowser/locationedit.h
@@ -28,6 +28,8 @@
 #ifndef locationedit_h
 #define locationedit_h
 
+#include <qconfig.h>
+
 #ifndef QT_NO_INPUTDIALOG
 #include <QtGui>
 
